--- a/public/index.html
+++ b/public/index.html
@@ -84,9 +84,8 @@
                         </div>
                         <div class="main-header-two__top-right">
                             <div class="main-header-two__social">
-                                <a href="https://twitter.com/avidansupport"><i class="fab fa-twitter"></i></a>
-                                <a href="https://facebook.com/avidansupport"><i class="fab fa-facebook"></i></a>
-                                <a href="https://instagram.com/avidansupport"><i class="fab fa-instagram"></i></a>
+                                <a href="https://twitter.com/avidansupportltd"><i class="fab fa-twitter"></i></a>
+                                <a href="https://instagram.com/avidansupportltd"><i class="fab fa-instagram"></i></a>
                             </div>
                         </div>
                     </div>
@@ -118,12 +117,15 @@
                                                 <li><a href="aviation">Aviation Services</a></li>
                                                 <li><a href="leasing">Aircraft Leasing</a></li>
                                                 <li><a href="charters">Charters</a></li>
+                                                <li><a href="charters">Military Equipment</a></li>
                                                 <li><a href="hydrology">Hydrology/Meteorology</a></li>
                                                 <li><a href="supply">Supply of aviation and maritime equipment</a></li>
                                                 <li><a href="concierge">Concierge Services </a></li>
                                             </ul>
                                         </li>
-                                       
+                                        <li >
+                                            <a href="clients">Our Clients</a>
+                                        </li>
                                         <li class="">
                                             <a href="contact">Contact Us</a>
                                         </li>
@@ -177,6 +179,7 @@
                   <li><a href="aviation">Aviation Services</a></li>
                   <li><a href="leasing">Aircraft Leasing</a></li>
                   <li><a href="charters">Charters</a></li>
+                  li><a href="military">Military Equipment</a></li>
                   <li><a href="hydrology">Hydrology/Meteorology</a></li>
                   <li><a href="supply">Supply of aviation and maritime equipment</a></li>
                   <li><a href="concierge">Concierge Services </a></li>
