Phone number fix

--- a/public/index.html
+++ b/public/index.html
@@ -200,15 +200,15 @@
             </li>
             <li>
                 <i class="fa fa-phone-alt"></i>
-                <a href="tel:+2348023060791">234 802 3060 791</a>
-                <a href="tel:+447424179683">+44 7424 179683</a>
+                <a href="tel:+2348100515182"> +234 810 0515 182</a>
+                <a href="tel:+2348153410870"> +234 815 3410 870</a>
+                <a href="tel:+447424179683">+44 7424 179683</a> 
             </li>
         </ul><!-- /.mobile-nav__contact -->
         <div class="mobile-nav__top">
             <div class="mobile-nav__social">
-                <a href="https://twitter.com/avidansupport"><i class="fab fa-twitter"></i></a>
-                <a href="https://facebook.com/avidansupport"><i class="fab fa-facebook"></i></a>
-                <a href="https://instagram.com/avidansupport"><i class="fab fa-instagram"></i></a>
+                <a href="https://twitter.com/avidansupportltd"><i class="fab fa-twitter"></i></a>
+                <a href="https://instagram.com/avidansupportltd"><i class="fab fa-instagram"></i></a>
             </div><!-- /.mobile-nav__social -->
         </div><!-- /.mobile-nav__top -->
 
