--- a/public/index.html
+++ b/public/index.html
@@ -117,7 +117,7 @@
                                                 <li><a href="aviation">Aviation Services</a></li>
                                                 <li><a href="leasing">Aircraft Leasing</a></li>
                                                 <li><a href="charters">Charters</a></li>
-                                                <li><a href="charters">Military Equipment</a></li>
+                                                <li><a href="military">Military Equipment</a></li>
                                                 <li><a href="hydrology">Hydrology/Meteorology</a></li>
                                                 <li><a href="supply">Supply of aviation and maritime equipment</a></li>
                                                 <li><a href="concierge">Concierge Services </a></li>
